--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,7 +24,7 @@ a {
 @media (prefers-color-scheme: dark) {
   html {
     /* color-scheme: dark; */
-    background-color: rgb(167, 252, 184)
+    background-color: #34d399
   }
   body {
   /*   color: white;
