--- a/components/Impressum.module.css
+++ b/components/Impressum.module.css
@@ -5,17 +5,16 @@
 .impressumRight {
   writing-mode: tb-rl;
 }
-.iconList {
-  display: flex;
-  flex-direction: column;
-  -webkit-box-align: center;
-  align-items: center;
-  margin: 0px;
-  padding: 0px;
-  list-style: none;
-}
 
-.iconList li a {
+.iconList {
   width: 20px;
   height: 20px;
+}
+
+.animate {
+  transition: all 1s ease-in-out;
+}
+
+.animate.appear {
+  opacity: 1;
 }
