--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Trispace:wght@300;400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Trispace:wght@300;400;700&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -24,10 +24,11 @@ a {
 @media (prefers-color-scheme: dark) {
   html {
     /* color-scheme: dark; */
-    background-color: #34d399
+    /*     background-color: #34d399 */
   }
   body {
-  /*   color: white;
+    /*   color: white;
     background: black; */
+    background-color: #34d399;
   }
 }
