--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,11 +24,8 @@ a {
 @media (prefers-color-scheme: dark) {
   html {
     /* color-scheme: dark; */
-    /*     background-color: #34d399 */
   }
   body {
-    /*   color: white;
-    background: black; */
-    background-color: #34d399;
+    background-color: #164e63;
   }
 }
