--- a/components/Impressum.module.css
+++ b/components/Impressum.module.css
@@ -15,6 +15,10 @@
   transition: all 1s ease-in-out;
 }
 
-.animate.appear {
-  opacity: 1;
+.animate.appearLeft {
+  left: 0;
+}
+
+.animate.appearRight {
+  right: 0;
 }
