remove color-scheme

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,7 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) { */
   html {
     /* color-scheme: dark; */
   }
@@ -49,4 +49,4 @@ a {
   margin: 0 auto;
   transform: rotate(90deg);
 }
-}
+/* } */
