--- a/components/SVG/CircuitBoard.module.css
+++ b/components/SVG/CircuitBoard.module.css
@@ -5,12 +5,24 @@
   perspective: 1000px;
 } */
 
-.pathClass {
+.pathOne {
   fill: none;
-  stroke-width: 2;
-  display: none;
-  animation: drawFill 5s 3s ease-out; /* name-you-pick, x seconds longs, wait x seconds, how many times etc  --> minus value starts earlier*/
+  stroke-width: 1;
+  animation: drawFill 3s 2s ease-out forwards; /* name-you-pick, x seconds longs, wait x seconds, how many times etc  --> minus value starts earlier*/
 }
+
+.pathTwo {
+  fill: none;
+  stroke-width: 1;
+  animation: drawFill 3s 4s ease-out forwards;
+}
+
+.pathThree {
+  fill: none;
+  stroke-width: 1;
+  animation: drawFill 3s 6s ease-out forwards;
+}
+
 
 .svgWrapper {
   position: relative;
@@ -21,60 +33,6 @@
     fill: #075985;
   }
   100% {
-    fill: white;
-  }
-}
-
-.pulse {
-  right: 190px;
-  top: 377px;
-  display: block;
-  position: absolute;
-  width: 27px;
-  height: 27px;
-  background: orange;
-  border-radius: 50%;
-  cursor: pointer;
-  box-shadow: 0 0 0 rgba(204, 169, 44, 0.4);
-  animation: pulse 2s infinite, showButton 3s ease-out;
-}
-
-@keyframes showButton {
-  0% {
-    opacity: 0;
-    background: none;
-  }
-  80% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-    background: orange;
-  }
-}
-
-@-webkit-keyframes pulse {
-  0% {
-    -webkit-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.4);
-  }
-  70% {
-    -webkit-box-shadow: 0 0 0 10px rgba(204, 169, 44, 0);
-  }
-  100% {
-    -webkit-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
-  }
-}
-@keyframes pulse {
-  0% {
-    -moz-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.4);
-    box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.4);
-  }
-  70% {
-    -moz-box-shadow: 0 0 0 10px rgba(204, 169, 44, 0);
-    box-shadow: 0 0 0 10px rgba(204, 169, 44, 0);
-  }
-  100% {
-    -moz-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
-    box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
+    fill: black;
   }
 }
