Add onscroll behaviour

--- a/components/Landing.module.css
+++ b/components/Landing.module.css
@@ -23,17 +23,17 @@
   }
 
   .animate {
-    animation: appear 2s 2s ease-out, shadowAppear 1s 4s ease-out;
+    animation: appear 2s 2s ease-out /*,  shadowAppear 1s 4s ease-out */;
     animation-fill-mode: forwards;
   }
 
   .animate2 {
-    animation: appear 2s 5s ease-out, shadowAppear 1s 6s ease-out;
+    animation: appear 2s 5s ease-out /* , shadowAppear 1s 6s ease-out */;
     animation-fill-mode: forwards;
   }
 
   .animate3 {
-    animation: appear 2s 9s ease-out, shadowAppear 1s 7s ease-out;
+    animation: appear 2s 9s ease-out /* , shadowAppear 1s 7s ease-out */;
     animation-fill-mode: forwards;
   }
 }
