--- a/components/Landing.module.css
+++ b/components/Landing.module.css
@@ -27,9 +27,53 @@
     animation-fill-mode: forwards;
   }
 
+  .animate::after {
+    content: "";
+    height: 34px;
+    width: 290px;
+    background-color: #47b5ff;
+    position: absolute;
+    top: 127px;
+    left: -33px;
+    transform: skewX(-55deg);
+  }
+  .animate::before {
+    content: "";
+    height: 120px;
+    width: 48px;
+    background-color: #dff6ff;
+    position: absolute;
+    left: -57px;
+    top: 24px;
+    top: px;
+    transform: skewY(-35deg);
+  }
+
   .animate2 {
     animation: appear 2s 5s ease-out /* , shadowAppear 1s 6s ease-out */;
     animation-fill-mode: forwards;
+  }
+
+  .animate2::after {
+    content: "";
+    height: 44px;
+    width: 253px;
+    background-color: #47b5ff;
+    position: absolute;
+    top: 358px;
+    left: 31px;
+    transform: skewX(-55deg);
+  }
+  .animate2::before {
+    content: "";
+    height: 265px;
+    width: 63px;
+    background-color: #dff6ff;
+    position: absolute;
+    left: 0px;
+    top: 115px;
+    top: px;
+    transform: skewY(-35deg);
   }
 
   .animate3 {
