--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,7 +26,7 @@ html {
 }
 body {
   /*  background-color: #164e63; */
-  background-color: #00c7d7cc;
+  background-color: #06283D;
 }
 
 /* .boardStyle {
