--- a/components/SVG/CircuitBoard.module.css
+++ b/components/SVG/CircuitBoard.module.css
@@ -16,13 +16,13 @@
 .pathTwo {
   fill: none;
   stroke-width: 1;
-  animation: drawFill 3s 5s ease-out forwards;
+  animation: drawFill 3s 6s ease-out forwards;
 }
 
 .pathThree {
   fill: none;
   stroke-width: 1;
-  animation: drawFill 3s 9s ease-out forwards;
+  animation: drawFill 3s 5s ease-out forwards;
 }
 
 .svgWrapper {
@@ -31,9 +31,10 @@
 
 @keyframes drawFill {
   0% {
-    fill: #075985;
+    /* fill: #075985; */
+    fill: white;
   }
   100% {
-    fill: #47B5FF;
+    fill: #47b5ff;
   }
 }
