--- a/components/Navigation.module.css
+++ b/components/Navigation.module.css
@@ -1,6 +1,8 @@
 .animate {
   transition: all 0.35s ease-in-out;
-  animation: flashLight 2s 2s 2 ease-out forwards;
+  color: black;
+  animation: flashLight 2s 2s ease-out forwards,
+    flashLight2 2s 6s ease-out forwards;
 }
 
 .animate.hide {
@@ -30,6 +32,20 @@
 }
 
 @keyframes flashLight {
+  0% {
+    /* background-color: #075985; */
+
+    background-color: #47b5ff;
+  }
+  10% {
+    background-color: white;
+  }
+  100% {
+    background-color: #47b5ff;
+  }
+}
+
+@keyframes flashLight2 {
   0% {
     /* background-color: #075985; */
 
