--- a/components/Landing.module.css
+++ b/components/Landing.module.css
@@ -181,33 +181,65 @@
 @-webkit-keyframes shiftedAnimContent {
   0% {
     transform: translate(0, 0);
+    -webkit-transform: translate(0, 0);
+    -moz-transform: translate(0, 0);
+    -ms-transform: translate(0, 0);
+    -o-transform: translate(0, 0);
   }
   100% {
     transform: translate(16px, -16px);
+    -webkit-transform: translate(16px, -16px);
+    -moz-transform: translate(16px, -16px);
+    -ms-transform: translate(16px, -16px);
+    -o-transform: translate(16px, -16px);
   }
 }
 @keyframes shiftedAnimContent {
   0% {
     transform: translate(0, 0);
+    -webkit-transform: translate(0, 0);
+    -moz-transform: translate(0, 0);
+    -ms-transform: translate(0, 0);
+    -o-transform: translate(0, 0);
   }
   100% {
     transform: translate(16px, -16px);
+    -webkit-transform: translate(16px, -16px);
+    -moz-transform: translate(16px, -16px);
+    -ms-transform: translate(16px, -16px);
+    -o-transform: translate(16px, -16px);
   }
 }
 @-webkit-keyframes shiftedAnimBottom {
   0% {
   }
   100% {
+    transform: skew(-45deg, 0deg) scale3d(1, 1, 1);
     -webkit-transform: skew(-45deg, 0deg) scale3d(1, 1, 1);
+    -moz-transform: skew(-45deg, 0deg) scale3d(1, 1, 1);
+    -ms-transform: skew(-45deg, 0deg) scale3d(1, 1, 1);
+    -o-transform: skew(-45deg, 0deg) scale3d(1, 1, 1);
     width: 100%;
+    -webkit-width: 100%;
+    -moz-width: 100%;
+    -ms-width: 100%;
+    -o-width: 100%;
   }
 }
 @keyframes shiftedAnimBottom {
   0% {
   }
   100% {
+    transform: skew(-45deg, 0deg) scale3d(1, 1, 1);
     -webkit-transform: skew(-45deg, 0deg) scale3d(1, 1, 1);
+    -moz-transform: skew(-45deg, 0deg) scale3d(1, 1, 1);
+    -ms-transform: skew(-45deg, 0deg) scale3d(1, 1, 1);
+    -o-transform: skew(-45deg, 0deg) scale3d(1, 1, 1);
     width: 100%;
+    -webkit-width: 100%;
+    -moz-width: 100%;
+    -ms-transform: 100%;
+    -o-transform: 100%;
   }
 }
 
@@ -216,7 +248,15 @@
   }
   100% {
     transform: skew(0deg, -45deg) scale3d(1, 1, 1);
+    -webkit-transform: skew(0deg, -45deg) scale3d(1, 1, 1);
+    -moz-transform: skew(0deg, -45deg) scale3d(1, 1, 1);
+    -ms-transform: skew(0deg, -45deg) scale3d(1, 1, 1);
+    -o-transform: skew(0deg, -45deg) scale3d(1, 1, 1);
     height: 100%;
+    -webkit-height: 100%;
+    -moz-height: 100%;
+    -ms-height: 100%;
+    -o-height: 100%;
   }
 }
 @keyframes shiftedAnimLeft {
@@ -224,7 +264,15 @@
   }
   100% {
     transform: skew(0deg, -45deg) scale3d(1, 1, 1);
+    -webkit-transform: skew(0deg, -45deg) scale3d(1, 1, 1);
+    -moz-transform: skew(0deg, -45deg) scale3d(1, 1, 1);
+    -ms-transform: skew(0deg, -45deg) scale3d(1, 1, 1);
+    -o-transform: skew(0deg, -45deg) scale3d(1, 1, 1);
     height: 100%;
+    -webkit-height: 100%;
+    -moz-height: 100%;
+    -ms-height: 100%;
+    -o-height: 100%;
   }
 }
 
