--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Trispace:wght@300;400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&family=Trispace:wght@300&display=swap');
 
 @tailwind base;
 @tailwind components;
