--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,12 +21,17 @@ a {
   box-sizing: border-box;
 }
 
-html {
-  /* color-scheme: dark; */
-}
+
 body {
   /*  background-color: #164e63; */
   background-color: #06283D;
+}
+
+.wrapper-background {
+  background-image: url("../public/colored-background.jpg");
+  height: 100vh;
+  width: 100vw;
+  background-size: contain;
 }
 
 /* .boardStyle {
