--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,10 +28,11 @@ body {
 }
 
 .wrapper-background {
-  background-image: url("../public/colored-background.jpg");
+  background-image: url("../public/dark-background.svg");
   height: 100vh;
   width: 100vw;
-  background-size: contain;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 /* .boardStyle {
